src/util/test/gen_yaml/gen-yaml-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: gen-yaml-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/gen-yaml-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/gen-yaml-default: "true"
