src/util/test/gen_yaml/scrum-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: scrum-postgres
  name: scrum-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: scrum-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/gen-yaml-default: 'true'
        io.kompose.service: scrum-postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: scrum
            - name: POSTGRES_PASSWORD
              value: scrum
            - name: POSTGRES_USER
              value: scrum
          image: postgres:9.6-alpine
          name: scrum-postgres
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: scrum-data
              subPath: my-subPath
      restartPolicy: Always
      volumes:
        - name: scrum-data
          persistentVolumeClaim:
            claimName: scrum-data
status: {}
