src/util/test/gen_yaml/scrum-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: scrum-ui
  name: scrum-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: scrum-ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/gen-yaml-default: "true"
        io.kompose.service: scrum-ui
    spec:
      containers:
        - image: public.ecr.aws/c2z1j4z9/chunb123:ui
          name: scrum-ui
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
