src/util/test/gen_yaml/scrum-ui-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: scrum-ui-tcp
  name: scrum-ui-tcp
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 80
  selector:
    io.kompose.service: scrum-ui
  type: LoadBalancer
status:
  loadBalancer: {}
